<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_coordinator_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/detail_appbar_id"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/detail_collapsing_toolbar_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detail_image_view_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/detail_toolbar_id"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_tweet_detail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/linearlayout_detail_accessed_date_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/textview_date_text_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:checked="false"
                                android:padding="5dp"
                                android:text="@string/validated_date"
                                android:textOff=""
                                android:textOn="" />

                            <TextView
                                android:id="@+id/textview_date_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="false"
                                android:padding="5dp"
                                android:text="@string/date"
                                android:textOff=""
                                android:textOn="" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearlayout_validate_id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="right"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:baselineAligned="false"
                            android:padding="5dp">

                            <ImageView
                                android:id="@+id/imageview_validate_id"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="false"
                                android:padding="5dp"
                                android:textOff=""
                                android:textOn="" />
                        </LinearLayout>
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textview_tweetdetails_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="Tweet Details"
                            android:textAlignment="center"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_tweeturl_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/textview_tweetdetails_id"
                            android:drawableStart="@drawable/url"
                            android:padding="5dp" />

                        <TextView
                            android:id="@+id/textview_tweettext_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/textview_tweeturl_id"
                            android:drawableStart="@drawable/text"
                            android:padding="5dp" />

                        <TextView
                            android:id="@+id/textview_nooflikes_id"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_below="@id/textview_tweettext_id"
                            android:drawableStart="@drawable/like"
                            android:padding="5dp" />
                    </RelativeLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/card_user_detail_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:id="@+id/textview_userdetails_id"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/user_details"
                            android:textAlignment="center"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/linearlayout_userdetails_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textview_userdetails_id"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_below="@id/textview_userdetails_id"
                                android:drawableStart="@drawable/user" />

                            <TextView
                                android:id="@+id/textview_username_id"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:hint="@string/user_name_value" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearlayout_followersdetails_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/linearlayout_userdetails_id"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:drawableStart="@drawable/followers"
                                android:text="Followers" />

                            <TextView
                                android:id="@+id/textview_followers_id"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:hint="@string/no_of_followers_value" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linearlayout_followingsdetails_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/linearlayout_followersdetails_id"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:drawableStart="@drawable/following"
                                android:text="Followings" />

                            <TextView
                                android:id="@+id/textview_followings_id"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:hint="No of followings value" />
                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>